Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/limits/StringLength.out
StringLength.java:22:37: compiler.err.limit.string
1 error
